# Personal-nutritionist_IA

./: README.md  food_image_analyser.py  nutritionist.py  nutritionist_asimov_bot.session  pyproject.toml  telegram.py
